# etl-loterias-caixa

./: datapackage.yaml  pyproject.toml
.github/: workflow_etl_loterias_caixa_failure.md
.github/workflows/: etl_loterias_caixa.yaml  sync_template.yaml
data/: mega_sena.csv  quina.csv
data-raw/: Mega-Sena.xlsx  Quina.xlsx
etl_loterias_caixa/: df_creation.py  extract.py  helpers.py  pipelines.py  transform.py
schemas/: mega_sena.yaml  quina.yaml
